--- a/paytolapp/styleser.css
+++ b/paytolapp/styleser.css
@@ -25,28 +25,6 @@
 
 /* Personalización del contenido */
 
-/* Personalización del navbar */
-
-.navbar-dark .navbar-brand {
-  color: #ffffff;
-  margin-top: 20px;
-}
-
-.navbar-brand span {
-  font-size: 24px; /* Cambiar el tamaño de fuente según sea necesario */
-}
-
-.navbar-dark .navbar-nav .nav-link {
-  color: #ffffff;
-}
-
-.navbar-dark .navbar-nav .nav-link:hover,
-.navbar-dark .navbar-nav .nav-link.active {
-  color: #ffffff;
-}
-
-/* Personalización del contenido */
-
 .container {
   margin: 0; /* Eliminado los márgenes superior e inferior */
   padding: 30px; /* Añadido relleno para separar el contenido del borde del navegador */
@@ -54,7 +32,7 @@
   flex-direction: column; /* Cambiado a 'column' para distribuir las filas una debajo de la otra */
   justify-content: space-between; /* Cambiado a 'space-between' para distribuir las filas uniformemente */
   align-items: center;
-  height: 100vh;
+  height: 80vh;
 }
 
 .row {
@@ -72,7 +50,8 @@
 }
 
 .imagen-container img {
-  width: 100%; /* Ancho del 100% para las imágenes */
+  width: 50%; /* Ancho del 100% para las imágenes */
+  height: 50%; /* Altura automática para las imágenes */
   
 /* Personalización del pie de página */
   
